# SemioVis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-desktop.yml
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/api/models/: compositional.py  image.py  interactive.py  representational.py
backend/api/routes/: compositional.py  dashboard.py  interactive.py  report.py  representational.py  upload.py
backend/core/: color_analysis.py  image_utils.py  local_interpretation.py  local_models.py  python_fallback.py  report_generator.py  vision_api.py
backend/cpp/: CMakeLists.txt  bindings.cpp  color_features.cpp  color_features.hpp  depth_features.cpp  depth_features.hpp  saliency.cpp  saliency.hpp  spatial_grid.cpp  spatial_grid.hpp  texture_features.cpp  texture_features.hpp  utils.cpp  vectors.cpp  vectors.hpp
backend/models/: README.md  download_models.py
backend/workers/: celery_app.py  tasks.py
desktop/build-scripts/: build_all.sh  bundle_backend.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: Install SemioVis.command
desktop/src-tauri/src/: main.rs  sidecar.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/compositional/: ColorPalette.tsx  CompositionalPanel.tsx  SaliencyHeatmap.tsx  SemioticGrid.tsx
frontend/src/components/dashboard/: DashboardPanel.tsx
frontend/src/components/interactive/: GazeOverlay.tsx  InteractivePanel.tsx  ModalityRadar.tsx
frontend/src/components/layout/: HelpModal.tsx  HomePage.tsx  (+5 more)
frontend/src/hooks/: useImageAnalysis.ts  useSettings.ts
frontend/src/store/: analysisStore.ts
frontend/src/types/: analysis.ts
infra/: nginx.conf
tests/backend/: test_api_routes.py  test_cpp_core.py  test_interpretation.py
(+6 files in other folders)
